[package]
name = "common-server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = {workspace = true, features = ["multipart"]}
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
common-storage.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
bytes.workspace = true